taylor helped me figure out the errors concerning the main controller. the syntax was correct on the ui router page and in the mainctrl file but needed to incorporate the src code in the index.html script tags with the proper syntax telling it to go into the scripts folder and then into the controllers folder. still hacking away at the scss to get that whitespace to disappear at the bottom of the page. also, taylor taught me that there is no need to inject the ng-controller in the html file since the ui router does that for you. now i would like to move the play and pause function into its own controller for the meditation view

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -72,7 +72,7 @@ body {
  {
     background-size: cover;
     background-image: url(http://gelohealthcare.com/wp-content/uploads/2015/02/yoga-art-photography-a47iwi9q.jpg);
-    height: 100vh;
+    height: 110%;
     width: 100%;
     background-position-x: 50%;
     background-position-y: 50%;
